name:                day1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/day1#readme
license:             BSD3
license-file:        LICENSE
author:              Illia Bobyr
maintainer:          illia.bobyr@gmail.com
copyright:           Google Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
