name:                day5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/day5#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Bobyr
maintainer:          ilya.bobyr@gmail.com
copyright:           Copyright: (c) 2017 Ilya Bobyr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day5
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , vector
